--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,7 @@
 {
-  "rewrites": [
+  "headers": [
     {
       "source": "/(.*)",
-      "destination": "/",
       "headers": [
         {
           "key": "Content-Security-Policy",
