--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
       "headers": [
         {
           "key": "Content-Security-Policy",
-          "value": "default-src 'self'; img-src 'self' data:; script-src 'self'; style-src 'self' 'unsafe-inline'"
+          "value": "default-src 'self'; connect-src 'self' https://menu-app-api.onrender.com; img-src 'self' data:; style-src 'self' 'unsafe-inline'; script-src 'self';"
         }
       ]
     }
